// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<PublicPage> theme wrapper > aplica data-theme="brand" no wrapper top-level 1`] = `
<div>
  <div
    class="min-h-screen bg-background text-foreground"
    data-theme="brand"
  >
    <main
      class="mx-auto flex w-full max-w-md flex-col items-center gap-6 px-4 py-8 sm:py-12"
    >
      <div
        aria-hidden="true"
        class="flex h-24 w-24 items-center justify-center rounded-full bg-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user h-12 w-12 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </div>
      <h1
        class="text-h1 text-primary text-center"
      >
        Demo
      </h1>
      <p
        class="text-body text-center text-muted-foreground"
      >
        Bio teste
      </p>
      <ul
        aria-label="Links de @demo"
        class="flex w-full flex-col gap-3"
      >
        <span>
          <li>
            <a
              class="flex w-full items-center gap-3 rounded-xl border border-border bg-card px-4 py-3 transition-all hover:bg-accent hover:shadow-md"
              data-link-id="lnk-1"
              href="https://instagram.com/demo"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-link h-5 w-5 shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
                />
                <path
                  d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
                />
              </svg>
              <span
                class="flex-1 truncate font-medium"
              >
                Instagram
              </span>
            </a>
          </li>
        </span>
      </ul>
    </main>
  </div>
</div>
`;

exports[`<PublicPage> theme wrapper > aplica data-theme="dark" no wrapper top-level 1`] = `
<div>
  <div
    class="min-h-screen bg-background text-foreground"
    data-theme="dark"
  >
    <main
      class="mx-auto flex w-full max-w-md flex-col items-center gap-6 px-4 py-8 sm:py-12"
    >
      <div
        aria-hidden="true"
        class="flex h-24 w-24 items-center justify-center rounded-full bg-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user h-12 w-12 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </div>
      <h1
        class="text-h1 text-primary text-center"
      >
        Demo
      </h1>
      <p
        class="text-body text-center text-muted-foreground"
      >
        Bio teste
      </p>
      <ul
        aria-label="Links de @demo"
        class="flex w-full flex-col gap-3"
      >
        <span>
          <li>
            <a
              class="flex w-full items-center gap-3 rounded-xl border border-border bg-card px-4 py-3 transition-all hover:bg-accent hover:shadow-md"
              data-link-id="lnk-1"
              href="https://instagram.com/demo"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-link h-5 w-5 shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
                />
                <path
                  d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
                />
              </svg>
              <span
                class="flex-1 truncate font-medium"
              >
                Instagram
              </span>
            </a>
          </li>
        </span>
      </ul>
    </main>
  </div>
</div>
`;

exports[`<PublicPage> theme wrapper > aplica data-theme="light" no wrapper top-level 1`] = `
<div>
  <div
    class="min-h-screen bg-background text-foreground"
    data-theme="light"
  >
    <main
      class="mx-auto flex w-full max-w-md flex-col items-center gap-6 px-4 py-8 sm:py-12"
    >
      <div
        aria-hidden="true"
        class="flex h-24 w-24 items-center justify-center rounded-full bg-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user h-12 w-12 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </div>
      <h1
        class="text-h1 text-primary text-center"
      >
        Demo
      </h1>
      <p
        class="text-body text-center text-muted-foreground"
      >
        Bio teste
      </p>
      <ul
        aria-label="Links de @demo"
        class="flex w-full flex-col gap-3"
      >
        <span>
          <li>
            <a
              class="flex w-full items-center gap-3 rounded-xl border border-border bg-card px-4 py-3 transition-all hover:bg-accent hover:shadow-md"
              data-link-id="lnk-1"
              href="https://instagram.com/demo"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-link h-5 w-5 shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
                />
                <path
                  d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
                />
              </svg>
              <span
                class="flex-1 truncate font-medium"
              >
                Instagram
              </span>
            </a>
          </li>
        </span>
      </ul>
    </main>
  </div>
</div>
`;
